Extracted bootstrap css to single file to be linked in all html files

--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -17,6 +17,8 @@
 
   <!-- Custom styles for this template -->
   <link href="./styles/profile.css" rel="stylesheet">
+  <!--Bootstrap template css-->
+  <link href="./styles/bootstrapTemplate.css"  rel="stylesheet">
 </head>
 
 <body>
