--- a/public/assignment/home.html
+++ b/public/assignment/home.html
@@ -17,6 +17,8 @@
 
   <!-- Custom styles for this template -->
   <link href="./styles/home.css" rel="stylesheet">
+  <!--Bootstrap template css-->
+  <link href="./styles/bootstrapTemplate.css"  rel="stylesheet">
 </head>
 
 <body>
