--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -18,7 +18,7 @@
   <!-- Custom styles for this template -->
   <link href="./styles/login.css" rel="stylesheet">
   <!--Bootstrap template css-->
-  <link href="./styles/bootstrapTemplate.css"  rel="stylesheet">
+  <link href="./styles/bootstrapTemplate.css" rel="stylesheet">
 </head>
 
 <body>
@@ -33,18 +33,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      <a class="navbar-brand" href="#">Form Maker</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Help</a></li>
+        <li><a href="./register.html">Register</a></li>
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Username</a></li>
+        <li><a href="#">Logout</a></li>
       </ul>
-      <form class="navbar-form navbar-right">
-        <input type="text" class="form-control" placeholder="Search...">
-      </form>
     </div>
   </div>
 </nav>
@@ -53,30 +50,36 @@
   <div class="row">
     <div class="col-sm-3 col-md-2 sidebar">
       <ul class="nav nav-sidebar">
-        <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Reports</a></li>
-        <li><a href="#">Analytics</a></li>
-        <li><a href="#">Export</a></li>
-      </ul>
-      <ul class="nav nav-sidebar">
-        <li><a href="">Nav item</a></li>
-        <li><a href="">Nav item again</a></li>
-        <li><a href="">One more nav</a></li>
-        <li><a href="">Another nav item</a></li>
-        <li><a href="">More navigation</a></li>
-      </ul>
-      <ul class="nav nav-sidebar">
-        <li><a href="">Nav item again</a></li>
-        <li><a href="">One more nav</a></li>
-        <li><a href="">Another nav item</a></li>
+        <li><a href="./home.html">Home</a></li>
+        <li><a href="./profile.html">Profile</a></li>
+        <li><a href="./admin.html">Admin</a></li>
+        <li><a href="./forms.html">Forms</a></li>
       </ul>
     </div>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-      <h1 class="page-header">Dashboard</h1>
+      <h1 class="page-header">Login</h1>
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label for="inputUsername" class="col-sm-2 control-label">Username:</label>
+          <div class="col-sm-10">
+            <input class="form-control" id="inputUsername" placeholder="Username">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputPassword" class="col-sm-2 control-label">Password:</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Login</button>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
-
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
