--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -18,7 +18,7 @@
   <!-- Custom styles for this template -->
   <link href="./styles/register.css" rel="stylesheet">
   <!--Bootstrap template css-->
-  <link href="./styles/bootstrapTemplate.css"  rel="stylesheet">
+  <link href="./styles/bootstrapTemplate.css" rel="stylesheet">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="./register.html">Register</a></li>
+        <li><a href="#">Register</a></li>
         <li><a href="./login.html">Login</a></li>
         <li><a href="#">Username</a></li>
         <li><a href="#">Logout</a></li>
@@ -89,8 +89,8 @@
           </div>
         </div>
       </form>
-
     </div>
+  </div>
 </div>
 
 <!-- Bootstrap core JavaScript
