--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -51,7 +51,7 @@
     <div class="col-sm-3 col-md-2 sidebar">
       <ul class="nav nav-sidebar">
         <li><a href="./home.html">Home</a></li>
-        <li class="active"><a href="./profile.html">Profile</a></li>
+        <li><a href="./profile.html">Profile</a></li>
         <li><a href="./admin.html">Admin</a></li>
         <li><a href="./forms.html">Forms</a></li>
       </ul>
@@ -74,13 +74,13 @@
         <div class="form-group">
           <label for="inputVerifyPassword" class="col-sm-2 control-label">Verify Password:</label>
           <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputVerifyPassword">
+            <input type="password" class="form-control" id="inputVerifyPassword" placeholder="Password Again">
           </div>
         </div>
         <div class="form-group">
           <label for="inputEmail" class="col-sm-2 control-label">Email:</label>
           <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputEmail" placeholder="Email">
+            <input class="form-control" id="inputEmail" placeholder="Email">
           </div>
         </div>
         <div class="form-group">
