--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -33,18 +33,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      <a class="navbar-brand" href="#">Form Maker</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Help</a></li>
+        <li><a href="./register.html">Register</a></li>
+        <li><a href="./login.html">Login</a></li>
+        <li><a href="#">Username</a></li>
+        <li><a href="#">Logout</a></li>
       </ul>
-      <form class="navbar-form navbar-right">
-        <input type="text" class="form-control" placeholder="Search...">
-      </form>
     </div>
   </div>
 </nav>
@@ -53,30 +50,76 @@
   <div class="row">
     <div class="col-sm-3 col-md-2 sidebar">
       <ul class="nav nav-sidebar">
-        <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Reports</a></li>
-        <li><a href="#">Analytics</a></li>
-        <li><a href="#">Export</a></li>
-      </ul>
-      <ul class="nav nav-sidebar">
-        <li><a href="">Nav item</a></li>
-        <li><a href="">Nav item again</a></li>
-        <li><a href="">One more nav</a></li>
-        <li><a href="">Another nav item</a></li>
-        <li><a href="">More navigation</a></li>
-      </ul>
-      <ul class="nav nav-sidebar">
-        <li><a href="">Nav item again</a></li>
-        <li><a href="">One more nav</a></li>
-        <li><a href="">Another nav item</a></li>
+        <li><a href="./home.html">Home</a></li>
+        <li><a href="./profile.html">Profile</a></li>
+        <li class="active"><a href="#">Admin</a></li>
+        <li><a href="./forms.html">Forms</a></li>
       </ul>
     </div>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-      <h1 class="page-header">Dashboard</h1>
-    </div>
+      <h1 class="page-header">Admin</h1>
+      <table class="table table-striped">
+        <caption>Users</caption>
+        <thead>
+        <tr>
+          <th>
+            <i class="glyphicon glyphicon-triangle-bottom"></i>&nbsp;
+            Username
+          </th>
+          <th>
+            <i class="glyphicon glyphicon-triangle-bottom"></i>&nbsp;
+            Password
+          </th>
+          <th>
+            <i class="glyphicon glyphicon-triangle-bottom"></i>&nbsp;
+            Role
+          </th>
+          <th><i class="glyphicon glyphicon-triangle-bottom"></i>&nbsp;
+            Action
+          </th>
+        </tr>
+        <tr>
+          <td><input type="text" class="form-control" placeholder="username"></td>
+          <td><input type="text" class="form-control" placeholder="password"></td>
+          <td><input type="text" class="form-control" placeholder="role1, role2"></td>
+          <td>
+            <i class="glyphicon glyphicon-plus"></i>&nbsp;&nbsp;
+            <i class="glyphicon glyphicon-ok"></i>
+          </td>
+        </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Alice</td>
+            <td></td>
+            <td>Student</td>
+            <td>
+              <i class="glyphicon glyphicon-remove"></i>&nbsp;&nbsp;
+              <i class="glyphicon glyphicon-pencil"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Bob</td>
+            <td></td>
+            <td>Faculty</td>
+            <td>
+              <i class="glyphicon glyphicon-remove"></i>&nbsp;&nbsp;
+              <i class="glyphicon glyphicon-pencil"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Charlie</td>
+            <td></td>
+            <td></td>
+            <td>
+              <i class="glyphicon glyphicon-remove"></i>&nbsp;&nbsp;
+              <i class="glyphicon glyphicon-pencil"></i>
+            </td>
+          </tr>
+        </tbody>
+      </table>
   </div>
 </div>
-
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
