--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -73,7 +73,7 @@
         </div>
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Login</button>
+            <a href="./profile.html" class="btn btn-default">Login</a>
           </div>
         </div>
       </form>
