--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -91,7 +91,7 @@
         </div>
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Update</button>
+             <a href="./profile.html" class="btn btn-default">Update</a>
           </div>
         </div>
       </form>
