--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -85,7 +85,7 @@
         </div>
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Register</button>
+            <a href="./profile.html" class="btn btn-default">Register</a>
           </div>
         </div>
       </form>
