Form and form-fields.html

--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -4,12 +4,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <!--<link rel="icon" href="../../favicon.ico">-->
-
-  <!--<title>Dashboard Template for Bootstrap</title>-->
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -33,18 +27,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      <a class="navbar-brand" href="#">Form Maker</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Help</a></li>
+        <li><a href="./register.html">Register</a></li>
+        <li><a href="./login.html">Login</a></li>
+        <li><a href="#">Username</a></li>
+        <li><a href="#">Logout</a></li>
       </ul>
-      <form class="navbar-form navbar-right">
-        <input type="text" class="form-control" placeholder="Search...">
-      </form>
     </div>
   </div>
 </nav>
@@ -53,26 +44,147 @@
   <div class="row">
     <div class="col-sm-3 col-md-2 sidebar">
       <ul class="nav nav-sidebar">
-        <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Reports</a></li>
-        <li><a href="#">Analytics</a></li>
-        <li><a href="#">Export</a></li>
-      </ul>
-      <ul class="nav nav-sidebar">
-        <li><a href="">Nav item</a></li>
-        <li><a href="">Nav item again</a></li>
-        <li><a href="">One more nav</a></li>
-        <li><a href="">Another nav item</a></li>
-        <li><a href="">More navigation</a></li>
-      </ul>
-      <ul class="nav nav-sidebar">
-        <li><a href="">Nav item again</a></li>
-        <li><a href="">One more nav</a></li>
-        <li><a href="">Another nav item</a></li>
+        <li><a href="./home.html">Home</a></li>
+        <li><a href="./profile.html">Profile</a></li>
+        <li><a href="./admin.html">Admin</a></li>
+        <li class="active"><a href="#">Forms</a></li>
       </ul>
     </div>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-      <h1 class="page-header">Dashboard</h1>
+      <h1 class="page-header">Forms: Registration Form</h1>
+      <ul class="nav nav-tabs">
+        <li class="active" role="presentation">
+          <a href="./forms.html">Forms</a>
+        </li>
+        <li class="" role="presentation">
+          <a href="#">Fields</a>
+        </li>
+      </ul>
+      <form class="clearfix">
+        <div>
+          <div class="form-group col-md-9">
+            <label for="firstName">First Name:</label>
+            <input type="text" class="form-control" id="firstName" placeholder="First Name">
+          </div>
+          <div class="icons col-md-3">
+            <i class="glyphicon glyphicon-pencil"></i>
+            <i class="glyphicon glyphicon-plus"></i>
+            <i class="glyphicon glyphicon-remove"></i>
+            <i class="glyphicon glyphicon-align-justify"></i>
+          </div>
+        </div>
+        <div>
+          <div class="form-group col-md-9">
+            <label for="lastName">Last Name:</label>
+            <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+          </div>
+          <div class="icons col-md-3">
+            <i class="glyphicon glyphicon-pencil"></i>
+            <i class="glyphicon glyphicon-plus"></i>
+            <i class="glyphicon glyphicon-remove"></i>
+            <i class="glyphicon glyphicon-align-justify"></i>
+          </div>
+        </div>
+        <div>
+          <div class="form-group col-md-9">
+            <label>Date of Birth:</label>
+            <select class="form-control">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+          <div class="icons col-md-3">
+            <i class="glyphicon glyphicon-pencil"></i>
+            <i class="glyphicon glyphicon-plus"></i>
+            <i class="glyphicon glyphicon-remove"></i>
+            <i class="glyphicon glyphicon-align-justify"></i>
+          </div>
+        </div>
+        <div>
+          <div class="form-group col-md-9">
+            <label>Gender</label>
+            <select class="form-control">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+          <div class="icons col-md-3">
+            <i class="glyphicon glyphicon-pencil"></i>
+            <i class="glyphicon glyphicon-plus"></i>
+            <i class="glyphicon glyphicon-remove"></i>
+            <i class="glyphicon glyphicon-align-justify"></i>
+          </div>
+        </div>
+        <div>
+          <div class="form-group col-md-9">
+            <label>Roles:</label>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" value="">
+                Admin
+              </label>
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" value="" disabled>
+                Student
+              </label>
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" value="" disabled>
+                User
+              </label>
+            </div>
+          </div>
+          <div class="icons col-md-3">
+            <i class="glyphicon glyphicon-pencil"></i>
+            <i class="glyphicon glyphicon-plus"></i>
+            <i class="glyphicon glyphicon-remove"></i>
+            <i class="glyphicon glyphicon-align-justify"></i>
+          </div>
+        </div>
+        <div>
+          <div class="form-group col-md-9">
+            <label>License Agreement:</label>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                Yes
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                No
+              </label>
+            </div>
+          </div>
+          <div class="icons col-md-3">
+            <i class="glyphicon glyphicon-pencil"></i>
+            <i class="glyphicon glyphicon-plus"></i>
+            <i class="glyphicon glyphicon-remove"></i>
+            <i class="glyphicon glyphicon-align-justify"></i>
+          </div>
+        </div>
+      </form>
+      <div>
+        <div class="form-group col-md-9">
+          <label>Add New Field:</label>
+          <select class="form-control">
+            <option>Single Line Text</option>
+          </select>
+        </div>
+        <div class="icons col-md-3">
+          <i class="glyphicon glyphicon-plus"></i>
+        </div>
+      </div>
     </div>
   </div>
 </div>
