--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -4,12 +4,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <!--<link rel="icon" href="../../favicon.ico">-->
-
-  <!--<title>Dashboard Template for Bootstrap</title>-->
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -33,18 +27,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      <a class="navbar-brand" href="#">Form Maker</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Help</a></li>
+        <li><a href="./register.html">Register</a></li>
+        <li><a href="./login.html">Login</a></li>
+        <li><a href="#">Username</a></li>
+        <li><a href="#">Logout</a></li>
       </ul>
-      <form class="navbar-form navbar-right">
-        <input type="text" class="form-control" placeholder="Search...">
-      </form>
     </div>
   </div>
 </nav>
@@ -53,26 +44,66 @@
   <div class="row">
     <div class="col-sm-3 col-md-2 sidebar">
       <ul class="nav nav-sidebar">
-        <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Reports</a></li>
-        <li><a href="#">Analytics</a></li>
-        <li><a href="#">Export</a></li>
-      </ul>
-      <ul class="nav nav-sidebar">
-        <li><a href="">Nav item</a></li>
-        <li><a href="">Nav item again</a></li>
-        <li><a href="">One more nav</a></li>
-        <li><a href="">Another nav item</a></li>
-        <li><a href="">More navigation</a></li>
-      </ul>
-      <ul class="nav nav-sidebar">
-        <li><a href="">Nav item again</a></li>
-        <li><a href="">One more nav</a></li>
-        <li><a href="">Another nav item</a></li>
+        <li><a href="./home.html">Home</a></li>
+        <li><a href="./profile.html">Profile</a></li>
+        <li><a href="./admin.html">Admin</a></li>
+        <li class="active"><a href="#">Forms</a></li>
       </ul>
     </div>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-      <h1 class="page-header">Dashboard</h1>
+      <h1 class="page-header">Forms</h1>
+      <ul class="nav nav-tabs">
+        <li class="" role="presentation">
+          <a href="#">Forms</a>
+        </li>
+        <li class="active" role="presentation">
+          <a href="./form-fields.html">Fields</a>
+        </li>
+      </ul>
+      <table class="table table-striped">
+        <thead>
+        <tr>
+          <th>
+            <i class="glyphicon glyphicon-triangle-bottom"></i>&nbsp;
+            Form Name
+          </th>
+          <th>
+            <i class="glyphicon glyphicon-triangle-bottom"></i>&nbsp;
+            Action
+          </th>
+        </tr>
+        <tr>
+          <td><input type="text" class="form-control" placeholder="name"></td>
+          <td>
+            <i class="glyphicon glyphicon-plus"></i>&nbsp;&nbsp;
+            <i class="glyphicon glyphicon-ok"></i>
+          </td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>Registration Form</td>
+          <td>
+            <i class="glyphicon glyphicon-remove"></i>&nbsp;&nbsp;
+            <i class="glyphicon glyphicon-pencil"></i>
+          </td>
+        </tr>
+        <tr>
+          <td>Contact List</td>
+          <td>
+            <i class="glyphicon glyphicon-remove"></i>&nbsp;&nbsp;
+            <i class="glyphicon glyphicon-pencil"></i>
+          </td>
+        </tr>
+        <tr>
+          <td>To Do List</td>
+          <td>
+            <i class="glyphicon glyphicon-remove"></i>&nbsp;&nbsp;
+            <i class="glyphicon glyphicon-pencil"></i>
+          </td>
+        </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
@@ -87,4 +118,4 @@
         integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
         crossorigin="anonymous"></script>
 </body>
-</html>l>
+</html>
