--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div class="project-title">
       Form Maker
     </div>
-    <a class="glyphicon glyphicon-list" href="./assignment/home.html"></a>
+    <a class="glyphicon glyphicon-list" href="assignment"></a>
   </div>
   <div class="project col-sm-6">
     <div class="project-title">
