Header still broken

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -12,21 +12,21 @@
   <script src="app.js"></script>
   <script src="config.js"></script>
   <script src="MainController.js"></script>
+  <script src="views/home/home.controller.js"></script>
+  <script src="views/header/header.controller.js"></script>
+  <script src="views/sidebar/sidebar.controller.js"></script>
 
   <title>Form Maker Application</title>
 </head>
 <body ng-controller="MainController">
-  <!--<div data-ng-include="'views/header/header.view.html'"></div>-->
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
-      <div class="col-sm-3 col-md-2 sidebar">
-        <ul class="nav nav-sidebar">
-          <li><a href="../home/home.view.html">Home</a></li>
-          <li><a href="../users/profile.view.html">Profile</a></li>
-          <li><a href="#">Admin</a></li>
-          <li><a href="../forms/forms.view.html">Forms</a></li>
-        </ul>
-      </div>
+      <div data-ng-include="'views/header/header.view.html'"></div>
+    </div>
+    <div class="row">
+    <div class="col-sm-3 col-md-2">
+      <div data-ng-include="'views/sidebar/sidebar.view.html'"></div>
+    </div>
       <div class="col-sm-9 col-md-10 main">
         <ng-view></ng-view>
       </div>
