--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/styles.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
@@ -11,26 +12,29 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.js"></script>
   <script src="app.js"></script>
   <script src="config.js"></script>
+  <script src="services/user.service.client.js"></script>
+  <script src="services/forms.service.client.js"></script>
   <script src="MainController.js"></script>
   <script src="views/home/home.controller.js"></script>
   <script src="views/header/header.controller.js"></script>
   <script src="views/sidebar/sidebar.controller.js"></script>
+  <script src="views/users/register.controller.js"></script>
+  <script src="views/users/login.controller.js"></script>
+  <script src="views/users/profile.controller.js"></script>
+  <script src="views/forms/forms.controller.js"></script>
+
 
   <title>Form Maker Application</title>
 </head>
+
 <body ng-controller="MainController">
-  <div class="container">
+  <div ng-include="'views/header/header.view.html'"></div>
+  <div class="container-fluid">
     <div class="row">
-      <div data-ng-include="'views/header/header.view.html'"></div>
+      <div ng-include="'views/sidebar/sidebar.view.html'"></div>
+      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view></div>
     </div>
-    <div class="row">
-    <div class="col-sm-3 col-md-2">
-      <div data-ng-include="'views/sidebar/sidebar.view.html'"></div>
-    </div>
-      <div class="col-sm-9 col-md-10 main">
-        <ng-view></ng-view>
-      </div>
-    </div>
+  </div>
   </div>
 </body>
 </html>
