--- a/public/project/index.html
+++ b/public/project/index.html
@@ -10,6 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.4/ui-bootstrap-tpls.js"></script>
   <script src="app.js"></script>
   <script src="config.js"></script>
   <script src="services/user.service.client.js"></script>
@@ -20,6 +21,10 @@
   <script src="views/users/register.controller.js"></script>
   <script src="views/users/profile.controller.js"></script>
   <script src="views/home/home.controller.js"></script>
+  <script src="views/events/manage.controller.js"></script>
+  <script src="views/modals/deleteEvent/deleteEventCtrl.js"></script>
+  <script src="views/modals/editEvent/editEventCtrl.js"></script>
+  <script src="views/modals/createEvent/createEventCtrl.js"></script>
 
   <title>Event Tracker Application</title>
 </head>
