--- a/public/project/index.html
+++ b/public/project/index.html
@@ -31,8 +31,11 @@
 
 <body ng-controller="MainController">
 <div ng-include="'views/header/header.view.html'"></div>
-<div class="container">
-    <ng-view></ng-view>
+<div class="container-fluid">
+  <div class="row">
+    <div ng-include="'views/sidebar/sidebar.view.html'"></div>
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view></div>
+  </div>
 </div>
 </body>
 </html>
