--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -14,6 +14,7 @@
   <script src="config.js"></script>
   <script src="services/user.service.client.js"></script>
   <script src="services/forms.service.client.js"></script>
+  <script src="services/field.service.client.js"></script>
   <script src="MainController.js"></script>
   <script src="views/home/home.controller.js"></script>
   <script src="views/header/header.controller.js"></script>
@@ -22,7 +23,7 @@
   <script src="views/users/login.controller.js"></script>
   <script src="views/users/profile.controller.js"></script>
   <script src="views/forms/forms.controller.js"></script>
-
+  <script src="views/forms/form-fields.controller.js"></script>
 
   <title>Form Maker Application</title>
 </head>
