--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="FormBuilderApp">
-<head>
+<>
   <meta charset="UTF-8">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -10,6 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.4/ui-bootstrap-tpls.js"></script>
   <script src="app.js"></script>
   <script src="config.js"></script>
   <script src="services/user.service.client.js"></script>
@@ -24,6 +25,7 @@
   <script src="views/users/profile.controller.js"></script>
   <script src="views/forms/forms.controller.js"></script>
   <script src="views/forms/form-fields.controller.js"></script>
+  <script src="views/forms/modals/editFieldModal.controller.js"></script>
 
   <title>Form Maker Application</title>
 </head>
