project server stuff

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <div class="project-title">
       Personal Project
     </div>
-    <a class="glyphicon glyphicon-picture" href="project"></a>
+    <a class="glyphicon glyphicon-picture" href="project/client"></a>
   </div>
 </div>
 </body>
