--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -33,8 +33,7 @@
 <div ng-include="'views/header/header.view.html'"></div>
 <div class="container-fluid">
   <div class="row">
-    <div ng-include="'views/sidebar/sidebar.view.html'"></div>
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view></div>
+    <div class="col-sm-12 main" ng-view></div>
   </div>
 </div>
 </body>
